--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">DesignKit<sub> JaroFrey</sub></a>
 
-    <a href="https://gum.co/dpcTH" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger">Buy now.</a>
+    <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger">Buy now.</a>
 
     <!-- <a class="navbar-brand" href="https://gum.co/dpcTH" target="_blank" data-gumroad-single-product="true">
       <button>Buy now</button>
@@ -71,7 +71,7 @@
             <h1 class="mb-5">Customize the background and icons to compliment the outstanding design of your iPhone or iPad.
             </h1>
             <a href="#pack1" class="btn btn-outline btn-xl js-scroll-trigger">Discover.</a>
-            <a href="https://gum.co/dpcTH" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger">Buy now.</a>
+            <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger">Buy now.</a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
