--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
   </section> -->
 
   <div class="features" id="pack1"></div>
-  <section class="pack style2" id="styleselector_pack1">
+  <section class="pack style1_2" id="styleselector_pack1">
     <div class="container h-100">
       <div class="row h-100">
         <div class="col-lg-7 my-auto">
@@ -150,70 +150,70 @@
         <div class="carousel-inner">
           
           <div class="carousel-item active">
-            <div id="style" class="style2"></div>
+            <div id="style" class="style1_2"></div>
             <div class="guide-container">
               <img src="img/pack1_showcase/16.jpg" alt="">
             </div>
           </div>
 
           <div class="carousel-item">
-            <div id="style" class="style3"></div>
+            <div id="style" class="style1_3"></div>
             <div class="guide-container">
               <img src="img/pack1_showcase/110.jpg" alt="">
             </div>
           </div>
 
           <div class="carousel-item">
-            <div id="style" class="style3"></div>
+            <div id="style" class="style1_3"></div>
             <div class="guide-container">
               <img src="img/pack1_showcase/12.jpg" alt="">
             </div>
           </div>
 
           <div class="carousel-item">
-            <div id="style" class="style1"></div>
+            <div id="style" class="style1_1"></div>
             <div class="guide-container">
               <img src="img/pack1_showcase/15.jpg" alt="">
             </div>
           </div>
 
           <div class="carousel-item">
-            <div id="style" class="style2"></div>
+            <div id="style" class="style1_2"></div>
             <div class="guide-container">
               <img src="img/pack1_showcase/18.jpg" alt="">
             </div>
           </div>
 
           <div class="carousel-item">
-            <div id="style" class="style2"></div>
+            <div id="style" class="style1_2"></div>
             <div class="guide-container">
               <img src="img/pack1_showcase/17.jpg" alt="">
             </div>
           </div>
 
           <div class="carousel-item">
-            <div id="style" class="style3"></div>
+            <div id="style" class="style1_3"></div>
             <div class="guide-container">
               <img src="img/pack1_showcase/19.jpg" alt="">
             </div>
           </div>
 
           <div class="carousel-item">
-            <div id="style" class="style1"></div>
+            <div id="style" class="style1_1"></div>
             <div class="guide-container">
               <img src="img/pack1_showcase/13.jpg" alt="">
             </div>
           </div>
 
           <div class="carousel-item">
-            <div id="style" class="style1"></div>
+            <div id="style" class="style1_1"></div>
             <div class="guide-container">
               <img src="img/pack1_showcase/14.jpg" alt="">
             </div>
           </div>
 
           <div class="carousel-item">
-            <div id="style" class="style3"></div>
+            <div id="style" class="style1_3"></div>
             <div class="guide-container">
               <img src="img/pack1_showcase/11.jpg" alt="">
             </div>
@@ -234,14 +234,91 @@
     </div>
   </section>
 
+  <div class="features" id="pack2"></div>
+  <section class="pack style2_1" id="styleselector_pack2">
+    <div class="container h-100">
+      <div class="row h-100">
+        <div class="col-lg-7 my-auto">
+          <div class="header-content mx-auto">
+            <hr>
+            <h1 class="mb-5">Pack #2<br/>Hill<wbr />Stream<wbr />Sea</h1>
+            <p class="">Water. The source of life, so essential and vital and yet so volatile and impelled by higher forces. Starting at the high snowy summits it knows only one direction. Beginning with small rivulets it unites with its equals to form brooks, rivers, streams to eventually end this journey in the endless ocean. This pack follows the lifelines of our planet, water, on its ever recurring journey.</p>
+            <hr>
+          </div>
+        </div>
+        <div class="col-lg-5 my-auto remove-margins">
+          <div id="carouselPack2" class="carousel slide" data-ride="carousel" data-interval="3000" data-keyboard=true>
+        <ol class="carousel-indicators">
+          <li data-target="#carouselPack2" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselPack2" data-slide-to="1"></li>
+          <li data-target="#carouselPack2" data-slide-to="2"></li>
+          <li data-target="#carouselPack2" data-slide-to="3"></li>
+          <li data-target="#carouselPack2" data-slide-to="4"></li>
+          <li data-target="#carouselPack2" data-slide-to="5"></li>
+          <li data-target="#carouselPack2" data-slide-to="6"></li>
+        </ol>
+        <div class="carousel-inner">
+          
+          <div class="carousel-item active">
+            <div id="style" class="style2_1"></div>
+            <div class="guide-container">
+              <img src="img/pack2_showcase/1.jpg" alt="">
+            </div>
+          </div>
 
-  <section class="features" id="pack2">
-    <div class="container">
-      <div class="section-heading text-center">
-        <h2>Pack #2<br/>Hill<wbr />Stream<wbr />Sea</h2>
-        <p class="text-muted">Comming soon.</p>
-        <!-- <a href="#todo" class="btn dark btn-outline btn-xl js-scroll-trigger">Show details</a> -->
-        <hr>
+          <div class="carousel-item">
+            <div id="style" class="style2_2"></div>
+            <div class="guide-container">
+              <img src="img/pack2_showcase/2.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style2_3"></div>
+            <div class="guide-container">
+              <img src="img/pack2_showcase/3.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style2_3"></div>
+            <div class="guide-container">
+              <img src="img/pack2_showcase/4.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style2_3"></div>
+            <div class="guide-container">
+              <img src="img/pack2_showcase/5.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style2_2"></div>
+            <div class="guide-container">
+              <img src="img/pack2_showcase/6.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style2_2"></div>
+            <div class="guide-container">
+              <img src="img/pack2_showcase/7.jpg" alt="">
+            </div>
+          </div>
+
+        </div>
+        <a class="carousel-control-prev" href="#carouselPack2" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselPack2" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+        </div>
+        </div>
       </div>
     </div>
   </section>
@@ -453,6 +530,12 @@
                 <ul class="timeline">
   
                   <li>
+                    <a>second pack finished</a>
+                    <a class="float-right">21 Nov, 2020</a>
+                    <p>After a short break, i finished the second pack as promised.</p>
+                  </li>
+
+                  <li>
                     <a>new nice page</a>
                     <a class="float-right">29 Oct, 2020</a>
                     <p>Polished out the thumbnails and showcases and i put the first package online, now available for download. Two more packages are coming soon.</p>
@@ -464,14 +547,14 @@
                     <p>Added more important icons, now there are 66 per color. soon it is ready to ship.</p>
                   </li>
 
+                    <div class="collapse multi-collapse" id="collapseDiv">
+  
                   <li>
                     <a>from dusk till midnight</a>
                     <a class="float-right">23 Oct, 2020</a>
                     <p>Another theme for the most mystical time of day, twilight. three more backgrounds added and new motivation gained..</p>
                   </li>
 
-                    <div class="collapse multi-collapse" id="collapseDiv">
-  
                   <li>
                     <a>new Icons on the block</a>
                     <a class="float-right">18 Oct, 2020</a>
