--- a/index.html
+++ b/index.html
@@ -323,13 +323,91 @@
     </div>
   </section>
 
-  <section class="features" id="pack3">
-    <div class="container">
-      <div class="section-heading text-center">
-        <h2>Pack #3<br/>Woods<wbr />Hunter<wbr />Prey</h2>
-        <p class="text-muted">Comming soon.</p>
-        <!-- <a href="#todo" class="btn dark btn-outline btn-xl js-scroll-trigger">Show details</a> -->
-        <hr>
+  <div class="features" id="pack3"></div>
+  <section class="pack style3_1" id="styleselector_pack3">
+    <div class="container h-100">
+      <div class="row h-100">
+        <div class="col-lg-7 my-auto">
+          <div class="header-content mx-auto">
+            <hr>
+            <h1 class="mb-5">Pack #3<br/>Wood<wbr />Hunter<wbr />Prey</h1>
+            <p class="">We enter the green lung of our planet. A place that has always been mystified by mankind, and justifiably enough, it is a very magical place. With this pack, we portray the forest as a habitat, the dominant hunters and their no less spectacular prey.</p>
+            <hr>
+          </div>
+        </div>
+        <div class="col-lg-5 my-auto remove-margins">
+          <div id="carouselPack3" class="carousel slide" data-ride="carousel" data-interval="3000" data-keyboard=true>
+        <ol class="carousel-indicators">
+          <li data-target="#carouselPack3" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselPack3" data-slide-to="1"></li>
+          <li data-target="#carouselPack3" data-slide-to="2"></li>
+          <li data-target="#carouselPack3" data-slide-to="3"></li>
+          <li data-target="#carouselPack3" data-slide-to="4"></li>
+          <li data-target="#carouselPack3" data-slide-to="5"></li>
+          <li data-target="#carouselPack3" data-slide-to="6"></li>
+        </ol>
+        <div class="carousel-inner">
+          
+          <div class="carousel-item active">
+            <div id="style" class="style3_1"></div>
+            <div class="guide-container">
+              <img src="img/pack3_showcase/1.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style3_1"></div>
+            <div class="guide-container">
+              <img src="img/pack3_showcase/2.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style3_3"></div>
+            <div class="guide-container">
+              <img src="img/pack3_showcase/3.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style3_2"></div>
+            <div class="guide-container">
+              <img src="img/pack3_showcase/4.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style3_1"></div>
+            <div class="guide-container">
+              <img src="img/pack3_showcase/5.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style3_3"></div>
+            <div class="guide-container">
+              <img src="img/pack3_showcase/6.jpg" alt="">
+            </div>
+          </div>
+
+          <div class="carousel-item">
+            <div id="style" class="style3_2"></div>
+            <div class="guide-container">
+              <img src="img/pack3_showcase/7.jpg" alt="">
+            </div>
+          </div>
+
+        </div>
+        <a class="carousel-control-prev" href="#carouselPack3" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselPack3" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+        </div>
+        </div>
       </div>
     </div>
   </section>
@@ -530,8 +608,14 @@
                 <ul class="timeline">
   
                   <li>
-                    <a>second pack finished</a>
+                    <a>third pack finished</a>
                     <a class="float-right">21 Nov, 2020</a>
+                    <p>for the time being the packs are now finished. so at least as far as it was planned. the third pack 'plays' in the woods and has very nice impressions to offer</p>
+                  </li>
+
+                  <li>
+                    <a>second pack finished</a>
+                    <a class="float-right">18 Nov, 2020</a>
                     <p>After a short break, i finished the second pack as promised.</p>
                   </li>
 
@@ -541,14 +625,14 @@
                     <p>Polished out the thumbnails and showcases and i put the first package online, now available for download. Two more packages are coming soon.</p>
                   </li>
 
+                    <div class="collapse multi-collapse" id="collapseDiv">
+  
                   <li>
                     <a>another rainy sunday </a>
                     <a class="float-right">25 Oct, 2020</a>
                     <p>Added more important icons, now there are 66 per color. soon it is ready to ship.</p>
                   </li>
 
-                    <div class="collapse multi-collapse" id="collapseDiv">
-  
                   <li>
                     <a>from dusk till midnight</a>
                     <a class="float-right">23 Oct, 2020</a>
@@ -615,7 +699,7 @@
     <div class="container">
       <p>iPhone, iPad nad iOS are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
       <p>This website does not use tracking tools and cookies, however the linked gumroad plugin does.</p>
-      <p>Thanks to gumroad.com for the plugin and for bootstrap for their boilerplate and plugins.</p>
+      <p>Thanks to gumroad.com for the plugin and for bootstrap for their boilerplate and plugins. Also thanks to pixabay.com and the contributors, from where I got some of the wallpapers.</p>
       <p>&copy; jarofrey.com 2020. All Rights Reserved.</p>
     </div>
   </footer>
