add german guide

--- a/index.html
+++ b/index.html
@@ -418,7 +418,8 @@
       <div class="section-heading text-center">
         <h2>Installation Guide</h2>
         <p class="text-muted">Follow this simple step by step guide to install first a wallpaper image and then custom icons on your mobile. If you prefere a video, search for 'ios 14 shortcuts icons' (e.g. <a href="https://www.youtube.com/watch?v=9hlATAYXDaw" target="_blank">this video</a>)</p>
-        <hr>
+        <p class="text-muted">German version is available <a href="guide_de.html">here</a>. Die Anleitung in deutscher Version <a href="guide_de.html">ist hier</a> zu finden.</p>
+        <hr><hr>
 
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval=false
           data-wrap=true>
