--- a/index.html
+++ b/index.html
@@ -609,6 +609,12 @@
                 <ul class="timeline">
   
                   <li>
+                    <a>german installation guide</a>
+                    <a class="float-right">21 Nov, 2020</a>
+                    <p>As i got a lot of requests for a german installation guide, I added a translation and a link to a german installation guide. Hope this helps :)</p>
+                  </li>
+
+                  <li>
                     <a>third pack finished</a>
                     <a class="float-right">21 Nov, 2020</a>
                     <p>for the time being the packs are now finished. so at least as far as it was planned. the third pack 'plays' in the woods and has very nice impressions to offer</p>
@@ -620,14 +626,14 @@
                     <p>After a short break, i finished the second pack as promised.</p>
                   </li>
 
+                    <div class="collapse multi-collapse" id="collapseDiv">
+  
                   <li>
                     <a>new nice page</a>
                     <a class="float-right">29 Oct, 2020</a>
                     <p>Polished out the thumbnails and showcases and i put the first package online, now available for download. Two more packages are coming soon.</p>
                   </li>
 
-                    <div class="collapse multi-collapse" id="collapseDiv">
-  
                   <li>
                     <a>another rainy sunday </a>
                     <a class="float-right">25 Oct, 2020</a>
