--- a/guide_de.html
+++ b/guide_de.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body id="page-top">
+<body id="page-top" lang="de">
 
   <section class="features bg-primary" id="guide">
     <div class="container">
@@ -50,7 +50,7 @@
             
             <div class="carousel-item active">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step1_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step1-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#1. Zuerst die heruntergeladenen Bilder entpacken und die gewünschten Bilder in die Fotos-App ablegen.</h3>
                 </div>
@@ -59,7 +59,7 @@
             
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step2_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step2-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text pin-top">
                   <h3>#2. Beim gewünschten Hintergrundebild, die Taste "Teilen" tippen.</h3>
                   </div>
@@ -68,7 +68,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step3_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step3-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#3. Dann 'Als Hintergrund' tippen.</h3>
                   </div>
@@ -77,7 +77,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step4_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step4-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text pin-top">
                   <h3>#4. Nun das Bild wie gewünscht positionieren und mit 'Sichern' und 'Beide' aktivieren.</h3>
                   </div>
@@ -86,7 +86,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step5_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step5-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#5. Gehe zum Home-Bildschirm zurück und öffne die 'Kurzbefehle' App.</h3>
                   </div>
@@ -95,7 +95,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step6_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step6-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#6. Tippe auf das '+' Symbol um einen neuen Kurzbefehl hinzuzufügen.</h3>
                   </div>
@@ -104,7 +104,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step7_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step7-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#7. Tippe auf die '+ Aktion hinzufügen' Schaltfläche.</h3>
                   </div>
@@ -113,7 +113,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step8_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step8-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#8. Finde und tippe auf 'App öffnen' (du kannst auch das Textfeld zur suche verwenden).</h3>
                   </div>
@@ -122,7 +122,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step9_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step9-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#9. Tippe auf 'Auswählen' und wähle die App aus welche du später durch ein neues Symbol öffnen willst.</h3>
                   </div>
@@ -131,7 +131,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step10_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step10-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#10. Tippe auf 'Mehr' (drei Punkte) in der oberen rechten Ecke.</h3>
                   </div>
@@ -140,7 +140,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step11_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step11-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#11. Tippe auf 'Zum Home-Bildschirm'.</h3>
                   </div>
@@ -149,7 +149,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step12_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step12-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#12. Tippe auf das Platzhaltersymbol unter 'Name und Symbol für Home-Bildschirm' und wähle 'Foto auswählen'. Finde und wähle das gewünschte Symbolbild aus. Optional kann hier ein Name vergeben werden der am Home-Bildschirm angezeigt wird.</h3>
                   </div>
@@ -158,7 +158,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step13_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step13-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#13. Tippe auf 'Hinzufügen' oben rechts.</h3>
                   </div>
@@ -167,7 +167,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step14_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step14-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#14. Tippe auf 'Fertig'.</h3>
                   </div>
@@ -176,7 +176,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step15_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step15-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#15. Das neue Symbol sollte schon am Home-Bildschirm zu finden sein. Wiederhole die Schritte 6-14 für jede weitere App die du anpassen möchtest.</h3>
                   </div>
