--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="col-lg-5 my-auto">
           <div class="device-container">
-            <img src="img/night_twilight_002_600x.jpg" class="img-fluid" alt="">
+            <img src="img/ios-design-night-twilight.jpg" class="img-fluid" alt="iOS Icon and Wallpaper design pack 1 night and twilight">
           </div>  
         </div>
       </div>
@@ -100,7 +100,6 @@
             </div>
             <div class="column">
               <p><i class="icon-check"></i> lifelong free updates</p>
-              <!--<p><i class="icon-check"></i> requesting a custom icon</p>-->
               <p><i class="icon-check"></i> coupon to give to a friend</p>
               <p><i class="icon-check"></i> detailed installation instructions</p>
             </div>
@@ -110,16 +109,6 @@
     </div>
   </section>
 
-
-  <!-- <section class="cta" id="showcase">
-    <div class="cta-content">
-      <div class="container">
-        <h2>Showcases.</h2>
-        <a href="#pack1" class="btn btn-outline btn-xl js-scroll-trigger">Show the storyline</a>
-      </div>
-    </div>
-    <div class="overlay"></div>
-  </section> -->
 
   <div class="features" id="pack1"></div>
   <section class="pack style1_2" id="styleselector_pack1">
@@ -152,70 +141,70 @@
           <div class="carousel-item active">
             <div id="style" class="style1_2"></div>
             <div class="guide-container">
-              <img src="img/pack1_showcase/16.jpg" alt="">
+              <img src="img/pack1/ios-design-pack-1-day-night-dawn16.jpg" alt="iOS icon and background design pack 1 example day night dawn">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style1_3"></div>
             <div class="guide-container">
-              <img src="img/pack1_showcase/110.jpg" alt="">
+              <img src="img/pack1/ios-design-pack-1-day-night-dawn110.jpg" alt="iOS icon and background design pack 1 example day night dawn">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style1_3"></div>
             <div class="guide-container">
-              <img src="img/pack1_showcase/12.jpg" alt="">
+              <img src="img/pack1/ios-design-pack-1-day-night-dawn12.jpg" alt="iOS icon and background design pack 1 example day night dawn">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style1_1"></div>
             <div class="guide-container">
-              <img src="img/pack1_showcase/15.jpg" alt="">
+              <img src="img/pack1/ios-design-pack-1-day-night-dawn15.jpg" alt="iOS icon and background design pack 1 example day night dawn">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style1_2"></div>
             <div class="guide-container">
-              <img src="img/pack1_showcase/18.jpg" alt="">
+              <img src="img/pack1/ios-design-pack-1-day-night-dawn18.jpg" alt="iOS icon and background design pack 1 example day night dawn">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style1_2"></div>
             <div class="guide-container">
-              <img src="img/pack1_showcase/17.jpg" alt="">
+              <img src="img/pack1/ios-design-pack-1-day-night-dawn17.jpg" alt="iOS icon and background design pack 1 example day night dawn">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style1_3"></div>
             <div class="guide-container">
-              <img src="img/pack1_showcase/19.jpg" alt="">
+              <img src="img/pack1/ios-design-pack-1-day-night-dawn19.jpg" alt="iOS icon and background design pack 1 example day night dawn">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style1_1"></div>
             <div class="guide-container">
-              <img src="img/pack1_showcase/13.jpg" alt="">
+              <img src="img/pack1/ios-design-pack-1-day-night-dawn13.jpg" alt="iOS icon and background design pack 1 example day night dawn">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style1_1"></div>
             <div class="guide-container">
-              <img src="img/pack1_showcase/14.jpg" alt="">
+              <img src="img/pack1/ios-design-pack-1-day-night-dawn14.jpg" alt="iOS icon and background design pack 1 example day night dawn">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style1_3"></div>
             <div class="guide-container">
-              <img src="img/pack1_showcase/11.jpg" alt="">
+              <img src="img/pack1/ios-design-pack-1-day-night-dawn11.jpg" alt="iOS icon and background design pack 1 example day night dawn">
             </div>
           </div>
 
@@ -262,49 +251,49 @@
           <div class="carousel-item active">
             <div id="style" class="style2_1"></div>
             <div class="guide-container">
-              <img src="img/pack2_showcase/1.jpg" alt="">
+              <img src="img/pack2/ios-design-pack-2-hill-stream-sea1.jpg" alt="iOS icon and background design pack 2 example hill stream sea">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style2_2"></div>
             <div class="guide-container">
-              <img src="img/pack2_showcase/2.jpg" alt="">
+              <img src="img/pack2/ios-design-pack-2-hill-stream-sea2.jpg" alt="iOS icon and background design pack 2 example hill stream sea">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style2_3"></div>
             <div class="guide-container">
-              <img src="img/pack2_showcase/3.jpg" alt="">
+              <img src="img/pack2/ios-design-pack-2-hill-stream-sea3.jpg" alt="iOS icon and background design pack 2 example hill stream sea">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style2_3"></div>
             <div class="guide-container">
-              <img src="img/pack2_showcase/4.jpg" alt="">
+              <img src="img/pack2/ios-design-pack-2-hill-stream-sea4.jpg" alt="iOS icon and background design pack 2 example hill stream sea">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style2_3"></div>
             <div class="guide-container">
-              <img src="img/pack2_showcase/5.jpg" alt="">
+              <img src="img/pack2/ios-design-pack-2-hill-stream-sea5.jpg" alt="iOS icon and background design pack 2 example hill stream sea">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style2_2"></div>
             <div class="guide-container">
-              <img src="img/pack2_showcase/6.jpg" alt="">
+              <img src="img/pack2/ios-design-pack-2-hill-stream-sea6.jpg" alt="iOS icon and background design pack 2 example hill stream sea">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style2_2"></div>
             <div class="guide-container">
-              <img src="img/pack2_showcase/7.jpg" alt="">
+              <img src="img/pack2/ios-design-pack-2-hill-stream-sea7.jpg" alt="iOS icon and background design pack 2 example hill stream sea">
             </div>
           </div>
 
@@ -351,49 +340,49 @@
           <div class="carousel-item active">
             <div id="style" class="style3_1"></div>
             <div class="guide-container">
-              <img src="img/pack3_showcase/1.jpg" alt="">
+              <img src="img/pack3/ios-design-pack-3-wood-hunter-prey1.jpg" alt="iOS icon and background design pack 3 example wood hunter prey">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style3_1"></div>
             <div class="guide-container">
-              <img src="img/pack3_showcase/2.jpg" alt="">
+              <img src="img/pack3/ios-design-pack-3-wood-hunter-prey2.jpg" alt="iOS icon and background design pack 3 example wood hunter prey">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style3_3"></div>
             <div class="guide-container">
-              <img src="img/pack3_showcase/3.jpg" alt="">
+              <img src="img/pack3/ios-design-pack-3-wood-hunter-prey3.jpg" alt="iOS icon and background design pack 3 example wood hunter prey">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style3_2"></div>
             <div class="guide-container">
-              <img src="img/pack3_showcase/4.jpg" alt="">
+              <img src="img/pack3/ios-design-pack-3-wood-hunter-prey4.jpg" alt="iOS icon and background design pack 3 example wood hunter prey">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style3_1"></div>
             <div class="guide-container">
-              <img src="img/pack3_showcase/5.jpg" alt="">
+              <img src="img/pack3/ios-design-pack-3-wood-hunter-prey5.jpg" alt="iOS icon and background design pack 3 example wood hunter prey">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style3_3"></div>
             <div class="guide-container">
-              <img src="img/pack3_showcase/6.jpg" alt="">
+              <img src="img/pack3/ios-design-pack-3-wood-hunter-prey6.jpg" alt="iOS icon and background design pack 3 example wood hunter prey">
             </div>
           </div>
 
           <div class="carousel-item">
             <div id="style" class="style3_2"></div>
             <div class="guide-container">
-              <img src="img/pack3_showcase/7.jpg" alt="">
+              <img src="img/pack3/ios-design-pack-3-wood-hunter-prey7.jpg" alt="iOS icon and background design pack 3 example wood hunter prey">
             </div>
           </div>
 
@@ -444,7 +433,7 @@
             
             <div class="carousel-item active">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step1_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step1-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#1. Place the downloaded images into your Photos app.</h3>
                 </div>
@@ -453,7 +442,7 @@
             
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step2_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step2-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text pin-top">
                   <h3>#2. Tap on the share icon.</h3>
                   </div>
@@ -462,7 +451,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step3_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step3-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#3. Tap on 'Use as Wallpaper'.</h3>
                   </div>
@@ -471,7 +460,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step4_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step4-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text pin-top">
                   <h3>#4. Position the image and tap on 'Set' and then 'Set Both' to activate the wallpaper.</h3>
                   </div>
@@ -480,7 +469,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step5_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step5-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#5. Go back to your Homescreen, find the 'Shortcuts' App and open it.</h3>
                   </div>
@@ -489,7 +478,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step6_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step6-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#6. Tap the '+' icon on the top to add a new shortcut.</h3>
                   </div>
@@ -498,7 +487,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step7_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step7-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#7. Tap the '+ Add Action' button to add a new action to this shortcut</h3>
                   </div>
@@ -507,7 +496,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step8_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step8-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#8. Find and tap 'Open App' (use the text field)</h3>
                   </div>
@@ -516,7 +505,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step9_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step9-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#9. Tap the 'Choose' field and select the app you want to change the icon of</h3>
                   </div>
@@ -525,7 +514,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step10_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step10-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#10. Tap the 'More' (three dots) button on top</h3>
                   </div>
@@ -534,7 +523,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step11_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step11-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#11. Tap 'Add to Home Screen'.</h3>
                   </div>
@@ -543,7 +532,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step12_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step12-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#12. Tap the placeholder icon and select 'Choose Photo'. Find and select the desired icon image. Optionally rename the app as you want it to appear</h3>
                   </div>
@@ -552,7 +541,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step13_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step13-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#13. Tap 'Add'</h3>
                   </div>
@@ -561,7 +550,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step14_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step14-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#14. Tap 'Done'. The new app icon is now created</h3>
                   </div>
@@ -570,7 +559,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/guide_step15_iphone11pr_en.png" alt="">
+                <img src="img/guide_en/ios-design-installation-guide-step15-en.png" alt="iOS icon and background design step by step installation guide">
                 <div class="guide-text">
                   <h3>#15. Your new App Icon should now be on the home screen. Repeat step 6-14 for every app you want to change.</h3>
                   </div>
