add canonial seo

--- a/guide_de.html
+++ b/guide_de.html
@@ -16,6 +16,11 @@
   <!-- Custom styles for this template -->
   <link href="jarostyle.min.css" rel="stylesheet">
 
+  <!-- SEO hints -->
+  <link rel="canonial" href="https://jarofrey.com/">
+  <link rel="canonial" href="http://www.jarofrey.com/">
+  <link rel="canonial" href="http://jarofrey.com/">
+
 </head>
 
 <body id="page-top" lang="de">
