change image type seo

--- a/guide_de.html
+++ b/guide_de.html
@@ -55,7 +55,7 @@
             
             <div class="carousel-item active">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step1-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step1-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#1. Zuerst die heruntergeladenen Bilder entpacken und die gewünschten Bilder in die Fotos-App ablegen.</h3>
                 </div>
@@ -64,7 +64,7 @@
             
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step2-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step2-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text pin-top">
                   <h3>#2. Beim gewünschten Hintergrundebild, die Taste "Teilen" tippen.</h3>
                   </div>
@@ -73,7 +73,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step3-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step3-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#3. Dann 'Als Hintergrund' tippen.</h3>
                   </div>
@@ -82,7 +82,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step4-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step4-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text pin-top">
                   <h3>#4. Nun das Bild wie gewünscht positionieren und mit 'Sichern' und 'Beide' aktivieren.</h3>
                   </div>
@@ -91,7 +91,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step5-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step5-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#5. Gehe zum Home-Bildschirm zurück und öffne die 'Kurzbefehle' App.</h3>
                   </div>
@@ -100,7 +100,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step6-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step6-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#6. Tippe auf das '+' Symbol um einen neuen Kurzbefehl hinzuzufügen.</h3>
                   </div>
@@ -109,7 +109,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step7-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step7-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#7. Tippe auf die '+ Aktion hinzufügen' Schaltfläche.</h3>
                   </div>
@@ -118,7 +118,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step8-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step8-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#8. Finde und tippe auf 'App öffnen' (du kannst auch das Textfeld zur suche verwenden).</h3>
                   </div>
@@ -127,7 +127,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step9-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step9-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#9. Tippe auf 'Auswählen' und wähle die App aus welche du später durch ein neues Symbol öffnen willst.</h3>
                   </div>
@@ -136,7 +136,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step10-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step10-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#10. Tippe auf 'Mehr' (drei Punkte) in der oberen rechten Ecke.</h3>
                   </div>
@@ -145,7 +145,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step11-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step11-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#11. Tippe auf 'Zum Home-Bildschirm'.</h3>
                   </div>
@@ -154,7 +154,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step12-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step12-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#12. Tippe auf das Platzhaltersymbol unter 'Name und Symbol für Home-Bildschirm' und wähle 'Foto auswählen'. Finde und wähle das gewünschte Symbolbild aus. Optional kann hier ein Name vergeben werden der am Home-Bildschirm angezeigt wird.</h3>
                   </div>
@@ -163,7 +163,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step13-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step13-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#13. Tippe auf 'Hinzufügen' oben rechts.</h3>
                   </div>
@@ -172,7 +172,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step14-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step14-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#14. Tippe auf 'Fertig'.</h3>
                   </div>
@@ -181,7 +181,7 @@
 
             <div class="carousel-item">
               <div class="guide-container">
-                <img src="img/guide_en/ios-design-installation-guide-step15-en.png" alt="iOS Hintergrund und Symbole Installationsanleitung">
+                <img src="img/guide_en/ios-design-installation-guide-step15-en.webp" alt="iOS Hintergrund und Symbole Installationsanleitung">
                 <div class="guide-text">
                   <h3>#15. Das neue Symbol sollte schon am Home-Bildschirm zu finden sein. Wiederhole die Schritte 6-14 für jede weitere App die du anpassen möchtest.</h3>
                   </div>
