--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <link rel="canonial" href="https://jarofrey.com/">
   <link rel="canonial" href="http://www.jarofrey.com/">
   <link rel="canonial" href="http://jarofrey.com/">
+  
+  <meta http-equiv="Cache-control" content="public">
 
 </head>
 
