add meta tag seo

--- a/guide_de.html
+++ b/guide_de.html
@@ -4,11 +4,12 @@
 <head>
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="description" content="Beautiful design packs for iOS devices, guided by stories lets you customize the background and icons to compliment the outstanding design of your iPhone or iPad. Plus full guide on how to install with the Shortcuts App." />
+  <meta name="author" content="Jaro Frey" />
 
-  <title>DesignKit by JaroFrey - beautiful design pack</title>
+  <title>iOS DesignKit by JaroFrey - beautiful design packs for iOS devices, including icons and background images</title>
+
 
   <!-- icon and bootstrap css  -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
