include bootstrap remove icon dep

--- a/guide_de.html
+++ b/guide_de.html
@@ -10,11 +10,7 @@
 
   <title>iOS DesignKit by JaroFrey - beautiful design packs for iOS devices, including icons and background images</title>
 
-
-  <!-- icon and bootstrap css  -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- Custom styles for this template -->
+  <!-- style including bootstrap -->
   <link href="jarostyle.min.css" rel="stylesheet">
 
   <!-- SEO hints -->
