--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
 
   <title>iOS DesignKit by JaroFrey - beautiful design packs for iOS devices, including icons and background images</title>
 
-
-  <!-- icon and bootstrap css  -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- Custom styles for this template -->
+  <!-- style including bootstrap -->
   <link href="jarostyle.min.css" rel="stylesheet">
 
   <!-- SEO hints -->
@@ -41,7 +37,7 @@
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
       aria-label="Toggle navigation">
-      <i class="icon-menu"></i>
+      menu
     </button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
@@ -102,14 +98,14 @@
           <p>Your purchase includes:</p>
           <div class="row">
             <div class="column">
-              <p><i class="icon-check"></i> three design stories with three themes each</p>
-              <p><i class="icon-check"></i> each theme consists of matching wallpapers and </p>
-              <p><i class="icon-check"></i> 66 custom icons</p>
+              <p>- three design stories with three themes each</p>
+              <p>- each theme consists of matching wallpapers and </p>
+              <p>- 66 custom icons</p>
             </div>
             <div class="column">
-              <p><i class="icon-check"></i> lifelong free updates</p>
-              <p><i class="icon-check"></i> coupon to give to a friend</p>
-              <p><i class="icon-check"></i> detailed installation instructions</p>
+              <p>- lifelong free updates</p>
+              <p>- coupon to give to a friend</p>
+              <p>- detailed installation instructions</p>
             </div>
           </div>
         </div>
