--- a/index.html
+++ b/index.html
@@ -25,15 +25,11 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink" id="mainNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">DesignKit<sub> JaroFrey</sub></a>
 
     <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger">Buy now.</a>
 
-    <!-- <a class="navbar-brand" href="https://gum.co/dpcTH" target="_blank" data-gumroad-single-product="true">
-      <button>Buy now</button>
-      <script src="https://gumroad.com/js/gumroad.js"></script>
-    </a> -->
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
       aria-label="Toggle navigation">
@@ -44,9 +40,6 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#contents">Contents</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#showcase">Showcases</a>
-        </li> -->
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#pack1">Pack 1</a>
         </li>
