remove lay over gumroad

--- a/guide_de.html
+++ b/guide_de.html
@@ -205,7 +205,9 @@
 
   <footer>
     <div class="container">
-      <p>iPhone, iPad nad iOS are trademarks of Apple Inc., registered in the U.S. and other countries. This website does not use tracking tools and cookies, however the linked gumroad plugin does. Thanks to gumroad.com for the plugin and for bootstrap for their boilerplate and plugins. Also thanks to pixabay.com and the contributors, from where I got some of the wallpapers.</p>
+      <p>iPhone, iPad nad iOS are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
+      <p>This website does not use tracking tools and cookies, however the linked gumroad plugin does.</p>
+      <p>Thanks to gumroad.com for the plugin and for bootstrap for their boilerplate and plugins. Also thanks to pixabay.com and the contributors, from where I got some of the wallpapers.</p>
       <p>&copy; jarofrey.com 2020. All Rights Reserved.</p>
     </div>
   </footer>
