--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <nav class="navbar navbar-expand-lg navbar-light fixed-top navbar-shrink" id="mainNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">DesignKit<sub> JaroFrey</sub></a>
 
-    <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline js-scroll-trigger">Buy now.</a>
+    <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger">Buy now.</a>
 
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
       data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -67,10 +67,8 @@
           <div class="header-content mx-auto">
             <h1 class="mb-5">Customize the background and icons to compliment the outstanding design of your iPhone or iPad.
             </h1>
-            <p>
-              <a href="#pack1" class="btn btn-outline js-scroll-trigger">Discover.</a>
-              <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline js-scroll-trigger">Buy now.</a>
-            </p>
+            <a href="#pack1" class="btn btn-outline btn-xl js-scroll-trigger">Discover.</a>
+            <a href="https://gum.co/etUZm" target="_blank" data-gumroad-single-product="true" class="btn btn-outline btn-xl js-scroll-trigger">Buy now.</a>
           </div>
         </div>
         <div class="col-lg-5 my-auto">
@@ -83,7 +81,7 @@
   </header>
 
 
-  <section class="contents  text-center" id="contents">
+  <section class="contents bg-primary text-center" id="contents">
     <div class="container">
       <div class="row">
         <div class="col-md-8 mx-auto">
@@ -401,7 +399,7 @@
   </section>
 
 
-  <section class="features " id="guide">
+  <section class="features bg-primary" id="guide">
     <div class="container">
       <div class="section-heading text-center">
         <h2>Installation Guide</h2>
@@ -660,7 +658,7 @@
 
 
 
-  <section class="contact" id="contact">
+  <section class="contact bg-primary" id="contact">
     <div class="container">
       <h3>Suggestions, problems, icon wishes?<br/>
         I would love to hear from you.<br/>
@@ -692,7 +690,9 @@
 
   <footer>
     <div class="container">
-      <p>iPhone, iPad nad iOS are trademarks of Apple Inc., registered in the U.S. and other countries. This website does not use tracking tools and cookies, however the linked gumroad plugin does. Thanks to gumroad.com for the plugin and for bootstrap for their boilerplate and plugins. Also thanks to pixabay.com and the contributors, from where I got some of the wallpapers.</p>
+      <p>iPhone, iPad nad iOS are trademarks of Apple Inc., registered in the U.S. and other countries.</p>
+      <p>This website does not use tracking tools and cookies, however the linked gumroad plugin does.</p>
+      <p>Thanks to gumroad.com for the plugin and for bootstrap for their boilerplate and plugins. Also thanks to pixabay.com and the contributors, from where I got some of the wallpapers.</p>
       <p>&copy; jarofrey.com 2020. All Rights Reserved.</p>
     </div>
   </footer>
